# mlcpp

./: CMakeLists.txt  main.cpp
mlcpp/: CMakeLists.txt  data.cpp  data.h  matrix.cpp  matrix.h
mlcpp_test/: CMakeLists.txt  test_data.cpp  test_matrix.cpp
